src/argocd/bootstrap-resources/esphome/services.yml
apiVersion: v1
kind: Service
metadata:
  name: esphome
spec:
  selector:
    app.kubernetes.io/name: esphome
  ports:
  - name: http
    protocol: TCP
    port: 6052
    targetPort: http
