src/argocd/bootstrap-resources/esphome/ingresses.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: esphome
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`esp.ryanb.tv`)
      kind: Rule
      services:
        - name: esphome
          kind: Service
          port: http
  tls: {}
